# provocative-cloud-0ja4gy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  deploy-production.yml  deploy-staging.yml  frontend-ci.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/ansible/: inventory.yml
infrastructure/docker/: gpu-base.Dockerfile  jupyter.Dockerfile  monitoring-base.Dockerfile
infrastructure/kubernetes/: backend-deployment.yaml  configmaps.yaml  frontend-deployment.yaml  gpu-manager-deployment.yaml  ingress.yaml  namespaces.yaml  persistent-volumes.yaml  secrets.yaml  services.yaml  storage-class.yaml
infrastructure/scripts/: backup-volumes.sh  (+4 more)
src/backend/: .dockerignore  .env.example  .gitignore  :q  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
src/backend/api/: __init__.py  app.py  config.py  constants.py  dependencies.py  main.py  middleware.py
src/backend/api/routes/: __init__.py  auth.py  billing.py  gpus.py  health.py  metrics.py  reservations.py  servers.py  users.py
src/backend/api/schemas/: __init__.py  auth.py  billing.py  gpu.py  metrics.py  reservation.py  server.py  user.py
src/backend/api/security/: __init__.py  jwt.py  oauth.py  permissions.py
src/backend/api/services/: __init__.py  auth_service.py  billing_service.py  carbon_metrics.py  gpu_service.py  metrics_service.py  reservation_service.py  server_service.py  stripe_service.py  user_service.py
src/backend/api/utils/: __init__.py  auth.py  carbon_metrics.py  gpu_metrics.py  logger.py  validators.py
src/backend/api/websockets/: __init__.py  gpu_metrics.py  manager.py
src/backend/db/: __init__.py  base.py  session.py
src/backend/db/migrations/: __init__.py  env.py  script.py.mako
src/backend/db/models/: __init__.py  billing.py  gpu.py  maintenance_log.py  metrics.py  reservation.py  server.py  user.py
src/backend/gpu_manager/: __init__.py  config.py  cuda_utils.py  manager.py  metrics.py  nvidia.py
src/backend/infrastructure/: __init__.py  docker.py  kubernetes.py  networking.py  storage.py  vm.py
src/backend/scripts/: backup.py  create_admin.py  db_init.py  gpu_setup.py  seed_data.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: __init__.py  test_auth.py  test_billing.py  test_gpus.py  test_metrics.py  test_reservations.py  test_servers.py  test_users.py
src/backend/tests/unit/: __init__.py  test_gpu_manager.py  test_infrastructure.py  test_security.py  test_services.py  test_utils.py
(+188 files in other folders)
